some work that I do not recall doing

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -111,7 +111,7 @@ map ctrl+shift+m detach_window ask
 
 #:     narrow_symbols codepoints Optionally the number of cells
 
-# disable_ligatures never
+disable_ligatures always
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them.  You can tell kitty to not render
